--- a/.github/workflows/fetch_ws_data.yml
+++ b/.github/workflows/fetch_ws_data.yml
@@ -1,16 +1,17 @@
 name: Fetch WS 2025 Data
 
 on:
-  workflow_dispatch: # 이 설정이 있어야 'Run workflow' 버튼이 생깁니다.
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      # actions/checkout@v3 -> SHA 값으로 변경
+      - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      # actions/setup-python@v4 -> SHA 값으로 변경
+      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ee83502
         with:
           python-version: '3.9'
 
