--- a/.github/workflows/fetch_ws_data.yml
+++ b/.github/workflows/fetch_ws_data.yml
@@ -7,17 +7,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # actions/checkout@v3 -> SHA 값으로 변경
-      - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
+      - name: Checkout Repository
+        uses: actions/checkout@v4 # 최신 안정 버전
 
-      # actions/setup-python@v4 -> SHA 값으로 변경
-      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ee83502
+      - name: Set up Python
+        uses: actions/setup-python@v5 # 최신 안정 버전
         with:
           python-version: '3.9'
 
       - name: Install dependencies
         run: |
-          pip install requests pandas
+          pip install requests pandas MLB-StatsAPI
 
       - name: Run Fetch Script
         run: python scripts/fetch_ws_data.py
@@ -26,6 +26,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add data/ws_2025_backtest.csv
+          git add data/ws_2025_verified_backtest.csv
           git commit -m "Update 2025 WS Backtest Data" || echo "No changes to commit"
           git push
