--- a/.github/workflows/fetch_ws_data.yml
+++ b/.github/workflows/fetch_ws_data.yml
@@ -7,11 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # actions/checkout@v4.2.2 (최신 SHA)
       - name: Checkout Repository
-        uses: actions/checkout@v4 # 최신 안정 버전
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 
 
+      # actions/setup-python@v5.3.0 (최신 SHA)
       - name: Set up Python
-        uses: actions/setup-python@v5 # 최신 안정 버전
+        uses: actions/setup-python@0b9327101e0bedc110a8f73bb588a4ed76115652 
         with:
           python-version: '3.9'
 
