Update GitHub Actions to use stable SHA versions

--- a/.github/workflows/fetch_ws_data.yml
+++ b/.github/workflows/fetch_ws_data.yml
@@ -7,13 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # actions/checkout@v4.2.2 (최신 SHA)
+      # actions/checkout@v4 (안정적인 SHA)
       - name: Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 
 
-      # actions/setup-python@v5.3.0 (최신 SHA)
+      # actions/setup-python@v5 (안정적인 SHA)
       - name: Set up Python
-        uses: actions/setup-python@0b9327101e0bedc110a8f73bb588a4ed76115652 
+        uses: actions/setup-python@f677139bee7ef9c59560c30a440685e499e28550 
         with:
           python-version: '3.9'
 
