--- a/.github/workflows/simulate_betting.yml
+++ b/.github/workflows/simulate_betting.yml
@@ -2,14 +2,13 @@ name: Run Betting Simulation
 
 on:
   workflow_run:
-    workflows: ["Update 2025 WS Data"] # 데이터 수집이 끝나면 자동으로 실행
+    workflows: ["Update 2025 WS Data"]
     types: [completed]
-  workflow_dispatch: # Actions 탭에서 수동으로 'Run workflow' 버튼을 눌러 실행
+  workflow_dispatch:
 
 jobs:
   simulate:
     runs-on: ubuntu-latest
-    # 데이터 수집이 성공했거나, 수동으로 실행했을 때만 작동
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
@@ -22,18 +21,17 @@ jobs:
           python-version: '3.9'
 
       - name: Install dependencies
-        run: |
-          pip install pandas tabulate  # <--- 표를 그리기 위해 tabulate가 꼭 필요합니다!
+        run: pip install pandas tabulate
 
-      - name: Run Betting Simulator
+      - name: Run All Simulators
         run: |
           python scripts/betting_simulator.py
-          python scripts/one_game_tracker.py  # <--- 이 줄을 추가하세요!
-          
+          python scripts/one_game_tracker.py
+
       - name: Commit and Push Changes
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add data/simulation_report.md
-          git commit -m "docs: update hybrid simulation report" || echo "No changes to commit"
+          git add data/*.md  # 데이터 폴더 내의 모든 마크다운 파일을 추가
+          git commit -m "docs: update all simulation reports" || echo "No changes to commit"
           git push
