--- a/.github/workflows/run_simulation.yml
+++ b/.github/workflows/run_simulation.yml
@@ -1,37 +1,43 @@
-name: Run Full Simulation
+name: MLB Stock Game Full Simulation
 
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Update 2025 WS Data"] # 데이터 업데이트 후 자동 실행
+    types: [completed]
+  workflow_dispatch: # 수동 실행 버튼 활성화
 
 jobs:
   run-simulation:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
+    # 이전 워크플로우가 성공했거나, 수동 실행일 때만 작동
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          auto-activate-base: true
           python-version: '3.9'
+          cache: 'pip' # 패키지 캐싱으로 실행 속도 업!
       
       - name: Install Python packages
         run: |
-          conda install -y pandas numpy
-          pip install MLB-StatsAPI
+          python -m pip install --upgrade pip
+          pip install pandas numpy
       
+      - name: Create Data Directory
+        run: mkdir -p data # data 폴더가 없으면 생성
+
       - name: Run simulation
-        run: python scripts/run_simulation.py
+        # 파일이 루트에 있다면 'python run_simulation.py'로 수정
+        run: python run_simulation.py
       
       - name: Commit results
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add data/*.csv
-          git commit -m "Add simulation results" || echo "No changes"
+          git commit -m "chore: update simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
           git push
