--- a/.github/workflows/run_simulation.yml
+++ b/.github/workflows/run_simulation.yml
@@ -1,17 +1,11 @@
-name: MLB Stock Game Full Simulation
+name: MLB Stock Game Full Pipeline
 
 on:
-  workflow_run:
-    workflows: ["Update 2025 WS Data"] # 데이터 업데이트 후 자동 실행
-    types: [completed]
-  workflow_dispatch: # 수동 실행 버튼 활성화
+  workflow_dispatch: # 수동 실행
 
 jobs:
-  run-simulation:
+  run-pipeline:
     runs-on: ubuntu-latest
-    # 이전 워크플로우가 성공했거나, 수동 실행일 때만 작동
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,18 +14,21 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-          cache: 'pip' # 패키지 캐싱으로 실행 속도 업!
+          cache: 'pip'
       
-      - name: Install Python packages
+      - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install pandas numpy
       
-      - name: Create Data Directory
-        run: mkdir -p data # data 폴더가 없으면 생성
+      - name: Ensure Directory
+        run: mkdir -p data
 
-      - name: Run simulation
-        # 파일이 루트에 있다면 'python run_simulation.py'로 수정
+      # [핵심] Step 1: WPA 분석 (이게 먼저 실행되어야 csv가 생깁니다)
+      - name: Calculate WPA
+        run: python analyze_wpa.py
+
+      # Step 2: 주가 및 유저 시뮬레이션 통합 실행
+      - name: Run Market Simulation
         run: python run_simulation.py
       
       - name: Commit results
@@ -39,5 +36,5 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add data/*.csv
-          git commit -m "chore: update simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
+          git commit -m "update: WS 2025 Simulation Results" || echo "No changes"
           git push
