--- a/.github/workflows/run_simulation.yml
+++ b/.github/workflows/run_simulation.yml
@@ -1,11 +1,12 @@
-name: MLB Stock Game Full Simulation
+name: Run Full Simulation
 
 on:
-  workflow_dispatch: # 수동 실행
+  workflow_dispatch: # 수동 실행 버튼
 
 jobs:
-  simulate:
+  run-simulation:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -14,27 +15,28 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-          cache: 'pip'
+          cache: 'pip' # 패키지 설치 속도를 높여줍니다
       
-      - name: Install Dependencies
+      - name: Install Python packages
         run: |
+          python -m pip install --upgrade pip
           pip install pandas numpy
       
-      - name: Ensure Directory
-        run: mkdir -p data
+      - name: Ensure Data Directory
+        run: mkdir -p data # data 폴더가 없으면 에러가 나므로 강제 생성
 
-      # 1단계: WPA 계산 및 데이터 생성 (이게 빠지면 에러가 납니다)
+      # [중요] 데이터가 먼저 생성되어야 하므로 analyze_wpa.py를 먼저 실행합니다
       - name: Step 1 - Calculate WPA
         run: python analyze_wpa.py
-
-      # 2단계: 주가 변동 및 유저 거래 통합 실행
-      - name: Step 2 - Run Market Simulation
+      
+      # [중요] 그 다음 주가 및 유저 시뮬레이션을 실행합니다
+      - name: Step 2 - Run Simulation
         run: python run_simulation.py
       
-      - name: Commit and Push
+      - name: Commit results
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add data/*.csv
-          git commit -m "update: ws 2025 simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
+          git commit -m "Add simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
           git push
