--- a/.github/workflows/run_simulation.yml
+++ b/.github/workflows/run_simulation.yml
@@ -1,4 +1,4 @@
-name: Run Full Simulation
+name: MLB Stock Game Full Simulation
 
 on:
   workflow_dispatch: # 수동 실행 버튼
@@ -15,28 +15,27 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-          cache: 'pip' # 패키지 설치 속도를 높여줍니다
+          cache: 'pip'
       
-      - name: Install Python packages
+      - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install pandas numpy
       
-      - name: Ensure Data Directory
-        run: mkdir -p data # data 폴더가 없으면 에러가 나므로 강제 생성
+      - name: Ensure Directory Structure
+        run: mkdir -p data
 
-      # [중요] 데이터가 먼저 생성되어야 하므로 analyze_wpa.py를 먼저 실행합니다
-      - name: Step 1 - Calculate WPA
+      # [중요] 1순위: WPA 데이터 생성 (이게 없으면 run_simulation이 죽습니다)
+      - name: Step 1 - Analyze WPA
         run: python analyze_wpa.py
-      
-      # [중요] 그 다음 주가 및 유저 시뮬레이션을 실행합니다
+
+      # [중요] 2순위: 통합 시뮬레이션 실행
       - name: Step 2 - Run Simulation
         run: python run_simulation.py
       
-      - name: Commit results
+      - name: Commit and Push Results
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add data/*.csv
-          git commit -m "Add simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
+          git commit -m "chore: update simulation results [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes to commit"
           git push
