--- a/.github/workflows/run_game1_sim.yml
+++ b/.github/workflows/run_game1_sim.yml
@@ -1,3 +1,49 @@
-- name: Run Game 1 Special Simulation
+name: MLB Stock Game 1 Simulation
+
+on:
+  workflow_dispatch: # 수동 실행 버튼
+
+jobs:
+  run-game1:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      
+      - name: Install Dependencies
+        run: pip install pandas numpy
+      
+      - name: Ensure Directory
+        run: mkdir -p data
+
+      # [안전장치] 만약 원본 WPA 데이터가 없으면 생성합니다
+      - name: Prepare Base WPA Data
         run: |
-          python simulator_game1.py
+          if [ ! -f "data/ws_2025_with_wpa.csv" ]; then
+            python analyze_wpa.py
+          fi
+
+      # [실행] 1차전 전용 시뮬레이터 가동
+      - name: Run Game 1 Simulation
+        run: |
+          if [ -f "simulator_game1.py" ]; then
+            python simulator_game1.py
+          else
+            echo "Error: simulator_game1.py 파일이 리포지토리에 없습니다!"
+            exit 1
+          fi
+      
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Action [Game1 Bot]"
+          git config --global user.email "action@github.com"
+          git add data/game1_*.csv
+          git commit -m "docs: update Game 1 simulation results" || echo "No changes"
+          git push
